--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -2,13 +2,16 @@
   "name": "@monorepo/backend",
   "version": "1.0.0",
   "type": "module",
+  "main": "src/index.js",
+  "types": "src/index.d.ts",
   "scripts": {
     "dev": "bun run --watch src/index.ts",
-    "build": "bun build src/index.ts --outdir dist --target node"
+    "build": "tsc && bun build src/index.ts --outdir dist --target node",
+    "build:types": "tsc --emitDeclarationOnly"
   },
   "dependencies": {
     "@elysiajs/cors": "^1.2.0",
-    "elysia": "^0.8.17"
+    "elysia": "^1.2.25"
   },
   "devDependencies": {
     "bun-types": "latest"
