--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -8,15 +8,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@elysiajs/eden": "^0.8.1",
+    "@elysiajs/eden": "^1.2.0",
     "@monorepo/backend": "workspace:*",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@types/bun": "^1.2.4",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
+    "elysia": "^1.2.25",
     "typescript": "^5.3.3",
     "vite": "^5.0.8"
   }
