--- a/packages/frontend/tsconfig.json
+++ b/packages/frontend/tsconfig.json
@@ -6,6 +6,7 @@
     "jsx": "react-jsx",
     "lib": ["DOM", "DOM.Iterable", "ESNext"],
     "baseUrl": ".",
+    "strict": true,
     "paths": {
       "@/*": ["./src/*"]
     }
