--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -5,7 +5,8 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "dev": "bun run --watch src/index.ts",
+    "dev": "bun run build:types && bun run --watch src/index.ts",
+    "dev:types": "tsc --emitDeclarationOnly --watch",
     "build": "bun run build:types && bun build src/index.ts --outdir dist --target node",
     "build:types": "tsc --emitDeclarationOnly"
   },
