--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "dev:frontend": "bun run --cwd packages/frontend dev",
     "dev:backend": "bun run --cwd packages/backend dev",
-    "dev": "bun run dev:backend & bun run dev:frontend",
+    "dev:backend:types": "bun run --cwd packages/backend dev:types",
+    "dev": "bun run dev:backend & bun run dev:backend:types & bun run dev:frontend",
     "build:frontend": "bun run --cwd packages/frontend build",
     "build:backend": "bun run --cwd packages/backend build",
     "build": "bun run build:backend && bun run build:frontend"
