--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "dev:backend": "bun run --cwd packages/backend dev",
     "dev:backend:types": "bun run --cwd packages/backend dev:types",
     "dev": "bun run dev:backend & bun run dev:backend:types & bun run dev:frontend",
-    "build:frontend": "bun run --cwd packages/frontend build",
+    "build:frontend:bundle": "bun run --cwd packages/frontend build",
+    "build:backend:types": "bun run --cwd packages/backend build:types",
+    "build:frontend": "bun run build:backend:types && bun run build:frontend:bundle",
     "build:backend": "bun run --cwd packages/backend build",
-    "build": "bun run build:backend && bun run build:frontend"
+    "build": "bun run build:backend && bun run build:frontend",
+    "start:backend": "./packages/backend/server"
   },
   "devDependencies": {
     "typescript": "^5.3.3"
